package truward.booklib;

option java_package = "com.truward.booklib.model";
option java_outer_classname = "Booklib";


/* Book&Person Related */

message NamedValue {
  optional int64 id = 1;
  required string name = 2;
}

message NamedValueList {
  repeated NamedValue values = 1;
  optional string offsetToken = 2;
}

message PersonRelation {
  required int64 id = 1;

  enum Type {
    AUTHOR = 1;
    ILLUSTRATOR = 2;
    UNKNOWN = 3;
  }
  required Type relation = 2;
}

message SeriesPos {
  required int64 id = 1;
  required int32 pos = 2;
}

message BookMeta {
  optional int64 id = 1;
  required string title = 2;
  required int32 fileSize = 3;
  optional int64 addDate = 4;
  required int64 langId = 5;
  required int64 originId = 6;
  repeated PersonRelation personRelations = 7;
  repeated int64 genreIds = 8;
  repeated SeriesPos seriesPos = 9;
}

message BookPageIds {
  repeated int64 bookIds = 1;
  repeated int64 originIds = 2;
  repeated int64 languageIds = 3;
  repeated int64 personIds = 4;
  repeated int64 genreIds = 5;
  repeated int64 seriesIds = 6;
}

/* Favorites */

message GetFavoritesResponse {
  message Favorites {
    repeated int64 bookIds = 1;
    repeated int64 personIds = 2;
  }

  required Favorites favorites = 1;
}

message SetFavoritesRequest {
 repeated int64 favBookIds = 1;
 repeated int64 favPersonIds = 2;

 repeated int64 unfavBookIds = 3;
 repeated int64 unfavPersonIds = 4;
}

